# flowkit

./: Cargo.toml  book.toml
crates/fcs/: Cargo.toml
crates/fcs/src/: analysis.rs  data.rs  fcs.rs  header.rs  keywords.rs  lib.rs  prelude.rs  text.rs  traits.rs
data/: Compensation Controls_AmCyan Stained Control.fcs  Compensation Controls_FITC Stained Control.fcs  Compensation Controls_PE Stained Control.fcs  Compensation Controls_PE-Cy7 Stained Control.fcs  Compensation Controls_Pacific Blue Stained Control.fcs  Compensation Controls_PerCP-Cy5-5 Stained Control.fcs  Compensation Controls_Unstained Control.fcs  DCs (AK) PAN2_FMO 80-3.fcs  DCs (AK) PAN2_HLAA2.fcs  DCs (AK) PAN2_iDC PAN2.fcs  DCs (AK) PAN2_iDC PAN2_30012019164044.fcs  DCs (AK) PAN2_mDCS pan2.fcs
scripts/: compile_flatbuffers.sh
src/: error.rs  io.rs  lib.rs  util.rs
src/entities/: biological_test.rs  drug.rs  mod.rs  pathogen.rs  subject.rs
src/entities/serialization/: mod.rs  schema.fbs  schema_generated.rs
src/models/: fcs.rs  fcs_experiment.rs  file_field.rs  gating.rs  mod.rs  panel.rs  project.rs  subject.rs
