[package]
name = "libflow"
version = "0.1.0"
authors = ["Federico <mail@fdionisi.me>"]
edition = "2018"

[[bin]]
name = "flow"

[dependencies]
anyhow = "1.0.32"
async-std = { version = "1.6.2", features = ["attributes"] }
byteorder = "1.3.4"
chrono = "0.4.13"
clap = "2.33.2"
flatbuffers = "0.6.1"
log = "0.4.11"
sled = "0.34.2"
structopt = "0.3.16"
